[metadata]
name = shtk
description = Shell ToolKit (SHTK)
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = shell subprocess
author = Jon Roose
author_email = jroose@gmail.com
maintainer = Jon Roose
maintainer_email = jroose@gmail.com
license = BSD 3-Clause License
classifiers = 
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options.extras_require]
test =
    coverage

[versioneer]
VCS = git
versionfile_source = shtk/_version.py
tag_prefix = v


